--- a/attendance/static/style.css
+++ b/attendance/static/style.css
@@ -1,11 +1,11 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,700);
+@import url(https://fonts.googleapis.com/css?family=Lato:400,700);
 
 html {
   margin: 0px;
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Lato", sans-serif;
   background-color: #e9eaef;
   margin: 0px;
 }
@@ -19,9 +19,10 @@ tr {
   padding: 8px;
 }
 
+input,
 button,
-input {
-  font-family: "Roboto", sans-serif;
+textarea {
+  font-family: "Lato", sans-serif;
 }
 
 .columns {
@@ -53,13 +54,17 @@ input {
 .hidden {
   display: none;
 }
-
 .action {
-  margin: 8px;
+  margin: 4px;
   border: none;
   border-radius: 4px;
   padding: 4px;
   font-weight: 400;
+}
+
+#notes {
+  margin: 4px;
+  font-size: 12px;
 }
 
 .action:active {
