--- a/attendance/templates/attendance/index.html
+++ b/attendance/templates/attendance/index.html
@@ -42,5 +42,8 @@
         {% endfor %}
       </div>
     </form>
+    <footer>
+      <a href="/static/nav.html">Other links</a>
+    </footer>
   </body>
 </html>
