--- a/attendance/static/style.css
+++ b/attendance/static/style.css
@@ -11,6 +11,11 @@ body {
   margin: 0px;
 }
 
+footer {
+  margin-bottom: 4px;
+  margin-inline: 12px;
+}
+
 h1 {
   text-align: center;
   font-weight: 700;
