--- a/attendance/static/style.css
+++ b/attendance/static/style.css
@@ -13,8 +13,8 @@ body {
 }
 
 footer {
-  margin-bottom: .25rem;
-  margin-inline: .75rem;
+  margin-bottom: 0.25rem;
+  margin-inline: 0.75rem;
 }
 
 h1 {
@@ -24,15 +24,19 @@ h1 {
 }
 
 tr {
-  padding: .5rem;
+  padding: 0.5rem;
 }
 
 input,
 button,
 textarea {
   font-family: "Lato", sans-serif;
-  font-size: .8rem;
+  font-size: 0.8rem;
   color: #363636;
+}
+
+.hidden {
+  display: none;
 }
 
 .columns {
@@ -41,7 +45,6 @@ textarea {
   align-items: stretch;
   overflow: hidden;
 }
-
 .column {
   margin: 12px;
   padding: 16px;
@@ -49,51 +52,67 @@ textarea {
 }
 
 .learner {
-  padding: .25rem;
+  padding: 0.25rem;
   cursor: pointer;
 }
 .learner:active {
   font-weight: bold;
 }
-
 .learner-selected {
   font-weight: bold;
 }
+
 .namelist {
   height: 75vh;
   overflow-y: scroll;
-  border-radius: .75rem;
-  border-right: .7rem solid #9cb8e6;
+  border-radius: 0.75rem;
+  border-right: 0.7rem solid #9cb8e6;
 }
 
-.hidden {
-  display: none;
+.actions {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
+.action-list {
+  flex-grow: 1;
+}
+
 .action {
-  margin: .25rem;
+  margin: 0.25rem;
   border: none;
-  border-radius: .25rem;
-  padding: .25rem;
+  border-radius: 0.25rem;
+  padding: 0.25rem;
   font-weight: 400;
+}
+.action:active {
+  background-color: gray;
+}
+
+.last-record {
+  overflow: scroll2;
+}
+.last-record-visible {
+  visibility: visible;
+  opacity: 1;
+}
+.last-record-hidden {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s 1s, opacity 1s linear;
 }
 
 #notes {
-  margin: .25rem;
-  font-size: .75rem;
-}
-
-.action:active {
-  background-color: gray;
+  margin: 0.25rem;
+  font-size: 0.75rem;
 }
 
 .status-absent {
   background-color: #f66151;
 }
-
 .status-out {
   background-color: #ff9966;
 }
-
 .status-in {
   background-color: #57e389;
 }
